--- a/manifest.yml
+++ b/manifest.yml
@@ -20,41 +20,25 @@ application:
   kvm_accel: false
   usb_accel: false
   routes:
-    - /=http://hbbs.cloud.lazycat.app.sctgdesk-server.lzcapp:21114/
+    - /=http://host.lzcapp:21114/
   public_path:
     - /
-  ingress:
-    - protocol: tcp
-      port: 21115
-      service: hbbs
-    - protocol: tcp
-      port: 21116
-      service: hbbs
-    - protocol: udp
-      port: 21116
-      service: hbbs
-    - protocol: tcp
-      port: 21118
-      service: hbbs
-    - protocol: tcp
-      port: 21117
-      service: hbbr
-    - protocol: tcp
-      port: 21119
-      service: hbbr
+  
 services:
   hbbs:
-    image: registry.lazycat.cloud/czyt/sctg/sctgdesk-server:b3c1c8c75843f25d
-    command: hbbs -r sctgdesk.example.com:21117
+    image: docker.1ms.run/sctg/sctgdesk-server:1.1.99.47
+    command: hbbs -r hbbr:21117
     depends_on:
       - hbbr
+    network_mode: host
     binds:
-      - /lzcapp/var/sctgdesk:/usr/local/share/sctgdesk
+      - /lzcapp/var/data:/usr/local/share/sctgdesk
   hbbr:
-    image: registry.lazycat.cloud/czyt/sctg/sctgdesk-server:b3c1c8c75843f25d
+    image: docker.1ms.run/sctg/sctgdesk-server:1.1.99.47
     command: hbbr
     binds:
-      - /lzcapp/var/sctgdesk:/usr/local/share/sctgdesk
+      - /lzcapp/var/data:/usr/local/share/sctgdesk
+    network_mode: host
 unsupported_platforms:
   - ios
   - android
