--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 name: SctgDesk Server
 package: cloud.lazycat.app.sctgdesk-server
 version: 1.1.101
+min_os_version: 1.3.8
 description: 一个修改版的 RustDesk 服务器程序
 usage: |
   安装好以后通过浏览器打开，然后在rustdesk客户端选项进行设置
